--- a/delivery-api/pom.xml
+++ b/delivery-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
     	<groupId>cz.muni.fi.pa165</groupId>
       	<artifactId>delivery</artifactId>
-      	<version>${global.version}</version>
+      	<version>0.0.1-SNAPSHOT</version>
    	</parent>
 
   	<artifactId>delivery-api</artifactId>
