--- a/pom.xml
+++ b/pom.xml
@@ -1,28 +1,63 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>cz.muni.fi.pa165</groupId>
-  <artifactId>delivery</artifactId>
-  <version>${global.version}</version>
-  <packaging>pom</packaging>
+    <groupId>cz.muni.fi.pa165</groupId>
+    <artifactId>delivery</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <name>delivery</name>
 
-  <name>delivery</name>
+    <properties>
+        <global.version>0.0.1-SNAPSHOT</global.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
-  <modules>
-  	  <module>delivery-api</module>
-	  <module>delivery-dao</module>	  
-	  <module>delivery-service</module>
-  </modules>
-  
-  <properties>
-  	  <global.version>0.0.1-SNAPSHOT</global.version>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <maven.compiler.source>1.8</maven.compiler.source>
-      <maven.compiler.target>1.8</maven.compiler.target>
-      <springframework.version>4.3.3.RELEASE</springframework.version>
-      <hibernate.version>5.2.2.Final</hibernate.version>
-      <mockito.version>1.9.5</mockito.version>
-  </properties>
+    <!-- defines compatible versions of many libraries -->
+    <!-- see http://docs.spring.io/platform/docs/current/reference/htmlsingle/#getting-started-using-spring-io-platform-maven -->
+    <parent>
+        <groupId>io.spring.platform</groupId>
+        <artifactId>platform-bom</artifactId>
+        <version>Athens-RELEASE</version>
+        <relativePath/>
+    </parent>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-all</artifactId>
+                <version>2.0.2-beta</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>net.sf.dozer</groupId>
+                <artifactId>dozer</artifactId>
+                <version>5.5.1</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <configuration>
+                        <source>8</source>
+                        <target>8</target>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
+    <modules>
+        <module>delivery-api</module>
+        <module>delivery-dao</module>
+        <module>delivery-service</module>
+        <module>delivery-spring-mvc</module>
+    </modules>
   
 </project>
