Added sample data and list of customers.

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
         <module>delivery-dao</module>
         <module>delivery-service</module>
         <module>delivery-spring-mvc</module>
+        <module>delivery-sampledata</module>
     </modules>
   
 </project>
