--- a/delivery-spring-mvc/pom.xml
+++ b/delivery-spring-mvc/pom.xml
@@ -69,6 +69,13 @@
             <artifactId>delivery-sampledata</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
     </dependencies>
 
 
