Shipment detail update

--- a/delivery-spring-mvc/src/main/resources/texts.properties
+++ b/delivery-spring-mvc/src/main/resources/texts.properties
@@ -1,3 +1,7 @@
 InputEmpty.customerForm = Cannot be empty or whitespace!
 
 ProductValidator.negative.weight = Weight must be greather than 0 kg
+
+EmptyInput.shipmentForm.courier = You have to assign the courier!
+EmptyInput.shipmentForm.price = You have to set the price!
+EmptyInput.shipmentForm.distance = You have to fill in the distance!
